--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3",
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "underscore": "^1.8.3"
   }
 }
