--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.13.3",
     "lodash": "^4.6.1",
     "mongoose": "^4.4.7",
+    "morgan": "^1.7.0",
     "sequelize": "^3.5.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "winston": "^2.2.0"
   }
 }
