--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.6.1",
     "mongoose": "^4.4.7",
     "morgan": "^1.7.0",
+    "password-hash-and-salt": "^0.1.3",
     "sequelize": "^3.5.1",
     "underscore": "^1.8.3",
     "winston": "^2.2.0"
