--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "crypto-js": "^3.1.5",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.0.5",
     "lodash": "^4.6.1",
     "mongoose": "^4.4.7",
     "morgan": "^1.7.0",
